# sdf-edit-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/circular_buffer/: Cargo.toml
crates/circular_buffer/src/: lib.rs
crates/counters/: Cargo.toml
crates/counters/src/: counters.rs  lib.rs
crates/enum_utils/: Cargo.toml
crates/enum_utils/src/: lib.rs
crates/profiler/: Cargo.toml
crates/profiler/instrumentation-code/: Cargo.toml
crates/profiler/instrumentation-code/src/: lib.rs
crates/profiler/instrumentation-macro/: Cargo.toml
crates/profiler/instrumentation_macro/: Cargo.toml
crates/profiler/instrumentation_macro/src/: lib.rs
crates/profiler/json_trace/: Cargo.toml
crates/profiler/json_trace/src/: lib.rs
crates/profiler/runtime_stats/: Cargo.toml
crates/profiler/runtime_stats/src/: lib.rs
crates/profiler/src/: lib.rs
models/: color_blending_demo.json  modeling_video_demo.json  mouse_color.json  perforated_cube.json  simple_edit_list_example.json
profiler/: Cargo.toml
profiler/instrumentation-code/: Cargo.toml
profiler/instrumentation-code/src/: lib.rs
profiler/instrumentation-macro/: Cargo.toml
profiler/instrumentation-macro/src/: lib.rs
profiler/src/: lib.rs
resources/shaders/: evaluate_svo_compute.wgsl  shader.wgsl  svo.wgsl  svo_sdf_brick.wgsl  svo_solid_brick.wgsl  svo_wireframe.wgsl
src/: application.rs  data.rs  log.rs  main.rs  profiler.rs  renderer.rs  shape_builder.rs  texture.rs
src/app/: application.rs  camera.rs  clock.rs  components.rs  gui.rs  mod.rs  model.rs  renderer.rs  rendering.rs  scene.rs  state.rs  transform.rs  updating.rs  vertex.rs
src/app/_old/: texture.rs
src/app/adt/: dense_slotmap.rs  mod.rs
src/app/gpu/: buffers.rs  camera.rs  context.rs  mod.rs  texture.rs
src/app/math/: bounding_volumes.rs
src/app/objects/: cube.rs  mod.rs
src/app/pipelines/: cube_outline.rs  mod.rs  svo_sdf_brick.rs  svo_solid_brick.rs  svo_solid_brick.wgsl
src/app/render_modules/: cube_outline.rs  gui.rs  lines.rs  mod.rs  svo.rs  svo_sdf_bricks.rs  svo_solid_bricks.rs  svo_wireframe.rs
src/app/renderer/: mod.rs  render_module.rs  render_pass.rs  renderer.rs
src/app/rendering/: buffers.rs  camera.rs  mod.rs  render_context.rs  render_module.rs  renderer.rs  vertices.rs
src/app/rendering/modules/: gui_renderer.rs  line_renderer.rs  mod.rs
src/app/rendering/render_modules/: line_render_module.rs  mod.rs
src/app/scene/: camera.rs  counters.rs  mod.rs  scene.rs
src/app/sdf/: bounding_volumes.rs  evaluator.rs  geometry.rs  mod.rs  model.rs  primitives.rs  svo.rs
src/app/sdf/svo/: brick_pool.rs  mod.rs  node_pool.rs  octree.rs
src/app/update_modules/: camera.rs  gui.rs  mod.rs  svo.rs  tmp_evaluator_config.rs
src/app/updating/: camera_updater.rs  mod.rs  updater.rs
src/app/updating/modules/: camera_updater.rs  mod.rs
src/demo_app/: bumpy_sphere.rs  components.rs  continuous_rotation.rs  define_renderer.rs  define_updater.rs  demo_app.rs  gui.rs  init_renderer.rs  init_scene.rs  init_updater.rs  mod.rs  scene.rs  style_gui.rs  svo_evaluator.rs  svo_wireframe.rs  tmp_evaluator_config.rs
src/demo_app/cube/: _outline_shader.wgsl  mod.rs  outline_pipeline.rs  outline_render_module.rs
src/demo_app/geometries/: bumpy_sphere.rs  dip_demo_1_a.rs  dip_demo_1_b.json  dip_demo_1_b.rs  mickey_mouse.json  mickey_mouse.rs  mod.rs  mouse.rs  perforated_cube.rs  simple_edit_list_example.rs  test_geometry.json  test_geometry.rs
src/demo_app/gui_modules/: camera_gui_module.rs  counters_gui.rs  dynamic_test_geometry.rs  legacy_apps_gui.rs  mod.rs  stats_gui.rs
src/demo_app/line/: _shader.wgsl  mod.rs
src/demo_app/line_module/: mod.rs
src/demo_app/modules/: dynamic_test_geometry.rs  legacy_apps_gui.rs  mod.rs  stats_gui.rs  svo_evaluator.rs  svo_wireframe.rs  tmp_evaluator_config.rs  voxel_size_reference_displayer.rs
src/demo_app/modules/cube/: _outline_shader.wgsl  mod.rs  outline_pipeline.rs  outline_render.rs
src/demo_app/modules/line/: mod.rs
src/demo_app/modules/svo_sdf_brick/: _brick_select.wgsl  _shader.wgsl  brick_instances.rs  brick_select_pipeline.rs  gpu_geometry_transforms.rs  mod.rs  pipeline.rs  render_module.rs
src/demo_app/svo_sdf_brick/: _brick_select.wgsl  _shader.wgsl  brick_instances.rs  brick_select_pipeline.rs  gpu_geometry_transforms.rs  mod.rs  pipeline.rs  render_module.rs
src/framework/: application.rs  camera.rs  clock.rs  framework.rs  log.rs  mod.rs
src/framework/camera/: camera.rs  camera_updater.rs  free_camera_rig.rs  mod.rs  orbit_camera_rig.rs
src/framework/gpu/: buffers.rs  camera.rs  context.rs  mod.rs  textures.rs  utils.rs  vertices.rs
src/framework/gui/: gui.rs  gui_module.rs  mod.rs  render_module.rs  update_module.rs
src/framework/math/: aabb.rs  bounding_cube.rs  frustum.rs  mod.rs  transform.rs
src/framework/renderer/: camera.rs  mod.rs  render_context.rs  render_module.rs  render_pass.rs  renderer.rs
src/framework/updater/: mod.rs
src/sdf/: evaluator.rs  geometry.rs  mod.rs  model.rs  primitives.rs  svo.rs
src/sdf/evaluator/: _kernel_svo_level.wgsl  _shader.wgsl  brick_padding_indices_uniform.rs  dispatch_assignment.rs  evaluate.rs  evaluation_context.rs  evaluator.rs  evaluator_shader.wgsl  kernel_svo_level.rs  kernel_svo_level.wgsl  mod.rs  work_assignment.rs
src/sdf/geometry/: edit.rs  geometry.rs  gpu_edits.rs  mod.rs  operation.rs  primitive.rs
src/sdf/svo/: brick_pool.rs  mod.rs  node_pool.rs  svo.rs
