
[workspace]
members = [
    ".",
    "crates/profiler",
    "crates/enum_utils",
    "crates/counters",
]

[package]
name = "sdf-edit-rs"
version = "0.0.1"
edition = "2021"

[profile.release-lto]
inherits = "release"
lto = true

[dependencies]

# Local crates
profiler   = { path = "crates/profiler" }
enum_utils = { path = "crates/enum_utils" }
counters   = { path = "crates/counters" }


# --- Core ---

log                = { version = "0.4.29", optional = true } # Generic logging API without backend (env_logger)
env_logger         = { version = "0.11.8", optional = true } # Logging into console based on environment variable.
pollster           = "0.4.0" # Minimalist async execution engine - required by wgpu because GPU operations are asynchronous
winit              = "0.28.7" # Windowing library (event loop naming, window creation, etc.)
winit_input_helper = "0.14.1" # Helper for winit input handling, storing input state based on processed events ...
wgpu               = "0.15.1" # A cross platform GPU API, in this applicationVulcan backend is used.
dolly              = "0.6.0" # A camera rig library with smoothing and inertia. Unmaintained and needs to be removed and camera reworked eventually.
bytemuck           = { version = "1.13.1", features = [ "derive" ] } # Static casting between basic types
glam               = { version = "0.23.0", features = [ "bytemuck", "serde" ] } # Math! Supporting SIMD optimizations. Needs to stay on version 0.23.0 so dolly works until we use that.
slotmap            = "1.1.1" # Efficient storage of entities
hecs               = { version = "0.11.0", features = [ "macros" ] } # A simple minimal ECS for scene object management
bitflags           = { version = "2.10.0", features = [ "bytemuck" ] } # Bitflags to easily handle bitflags, 2.0.2 does not support bytemuck yet: https://github.com/bitflags/bitflags/issues/310
rand               = "0.9.2" # Random number generator
rfd                = "0.17.2" # File dialog

# --- Serialization ---

serde      = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"

# Easily convert enums to strings
strum        = "0.27.2"
strum_macros = "0.27.2"

# GUI
egui        = "0.21.0" # Immediate mode gui library
egui_extras = "0.21.0" # For drawing tables
egui-wgpu   = "0.21.0" # Wgpu backend integration with egui
egui-winit  = "0.21.1" # Egui integration with winit


[features]
json_trace = [ "profiler/json_trace" ]
stats      = [ "profiler/stats" ]
counters   = [ "counters/enabled" ]
log        = [ "dep:log", "dep:env_logger" ]

# Toggles to avoid commenting out code
lod_test = [] # Demo scene to test LOD with large number of objects
white_bg = [] # Sets white background
dip_demo = [] # Demo scene to generate image for diploma thesis
no_vsync = [] # Disables vsync
rotation = [] # gives each model a random rotation velocity
all_fps  = [] # updates as fast as possible
