[package]
name = "counters"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot    = { version = "0.12.5", optional = true }
log            = { version = "0.4.29", optional = true }
env_logger     = { version = "0.11.8", optional = true }
circular_buffer = { path = "../circular_buffer", optional = true }

[features]
enabled = [
    "parking_lot",
    "log",
    "env_logger",
    "circular_buffer",
]
