[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
json_trace            = { path = "./json_trace", optional = true }
runtime_stats         = { path = "./runtime_stats", optional = true }
instrumentation_macro = { path = "./instrumentation_macro" }

[features]
json_trace=[
    "instrumentation_macro/json_trace",
    "dep:json_trace",
]
stats=[
    "instrumentation_macro/stats",
    "dep:runtime_stats",
]
