[package]
name = "instrumentation-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro=true

[dependencies]
quote = { version = "1.0", default-features = false }
syn = { version = "1.0", features = ["full"] }
instrumentation-code  = { path = "../instrumentation-code", optional = true }

[features]
enabled = [
    "dep:instrumentation-code"
]
