[package]
name = "instrumentation_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro=true

[dependencies]
quote         = { version = "1.0.43", default-features = false }
syn           = { version = "2.0.114", features = ["full", "extra-traits"] }
json_trace    = { path = "../json_trace", optional = true }
runtime_stats = { path = "../runtime_stats", optional = true }


[features]
json_trace=[ "dep:json_trace" ]
stats=[ "dep:runtime_stats" ]
